attempt to fix docs content spillover on DuckDuckGo mobile
content should scroll instead of making the whole page wider

--- a/assets/css/v1/paketo.scss
+++ b/assets/css/v1/paketo.scss
@@ -268,6 +268,7 @@ table {
 }
 .text-col {
 	max-width: 1000px;
+	overflow: auto;
 }
 .inner {
 	max-width: 1140px;
